# ds-python-01

./: .gitignore  README.md  ds_tool.spec  pyproject.toml
ds_tool/: __init__.py  auth.py  cache.py  cli.py  client.py  collector.py  filters.py  models.py  soap.py
ds_tool/excel/: export.py
ds_tool/gui/: __init__.py  __main__.py  actions.py  app.py  async_bridge.py  demo.py  main_window.py  selection_config.py  state.py  theme.py
ds_tool/gui/tabs/: design_spec.py  multiple_compare.py  settings.py  traceability.py
ds_tool/gui/widgets/: connection_bar.py  dual_list.py  (+2 more)
ds_tool/metadata/: apex_triggers.py  catalog.py  compact_layouts.py  email_alerts.py  email_templates.py  field_sets.py  field_updates.py  fields.py  flows.py  layouts.py  lifecycle.py  lightning_pages.py  objects.py  page_layouts.py  process_builder.py  profiles.py  record_types.py  search_layouts.py  sharing.py  tab_settings.py  validation.py  workflows.py
ds_tool/pdf/: render.py
tests/: test_apex_triggers.py  test_auth.py  test_cache.py  test_catalog.py  test_compact_layouts.py  test_email_alerts.py  test_email_templates.py  test_excel_export.py  test_field_sets.py  test_field_updates.py  test_fields_default_value.py  test_filters.py  test_flows.py  test_layouts.py  test_lifecycle.py  test_lightning_pages.py  test_objects.py  test_page_layouts.py  test_pdf_render.py  test_process_builder.py  test_profiles_normalize.py  test_record_types_picklists.py  test_search_layouts.py  test_selection_config.py  test_sharing.py  test_tab_settings.py  test_validation_rules.py
tools/: ui_test_record.py
(+22 files in other folders)
